# remote_mouse_server

./: main.py  pyproject.toml
remote_mouse/: server.py
