[tool.poetry]
name = "remote_mouse_server"
version = "0.0.1"
description = ""
authors = ["Alexander Walther"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "0.75.0"
pydantic = "1.9.0"
uvloop = "0.16.0"
uvicorn = "0.17.6"
PyAutoGUI = "0.9.53"
websockets = "10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
